[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/awesome_splash/core/AspectNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/demo_collection/aqua/splash_screen.gd" type="Script" id=2]
[ext_resource path="res://src/demo_collection/aqua/assets/wave.png" type="Texture" id=4]
[ext_resource path="res://addons/awesome_splash/text_node/AweListTextNode.gd" type="Script" id=5]
[ext_resource path="res://addons/awesome_splash/text_node/AweTextNode.gd" type="Script" id=6]
[ext_resource path="res://src/demo_collection/aqua/assets/logo.png" type="Texture" id=7]
[ext_resource path="res://addons/awesome_splash/assets/font/LilitaOne-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://addons/awesome_splash/assets/font/RobotoCondensed-Light.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 230
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 9 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void fragment() {
    vec4 color = vec4(1.0, 1.0, 1.0, 1.0);
	vec2 center = vec2(0.5, 0.5);
	float r2 = (UV.x - center.x) * (UV.x - center.x) + (UV.y - center.y) * (UV.y - center.y);
	if (r2 > 0.25) {
		color.a = 0.0;
	} else {
		color.a = r2;
	}
	if (r2 >= 0.225 && r2 <= 0.25){
		color.a = 1.0;
	}
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="SplashAqua" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectNode" parent="." instance=ExtResource( 1 )]

[node name="OutlineFrame" parent="AspectNode" index="0"]
margin_right = 1400.0
margin_bottom = 1400.0

[node name="Wave1" type="Node2D" parent="AspectNode"]

[node name="Sprite" type="Sprite" parent="AspectNode/Wave1"]
position = Vector2( 391.864, 2759.47 )
scale = Vector2( 4.17718, 2.32124 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="AspectNode/Wave1"]
position = Vector2( 2906.74, 2796.17 )
scale = Vector2( 4.50917, 2.32124 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="AspectNode/Wave1"]
position = Vector2( -2248.66, 2681.41 )
scale = Vector2( 3.33084, 2.32124 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="AspectNode/Wave1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3908.0
margin_top = 3106.0
margin_right = 5150.0
margin_bottom = 13949.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoContainer" type="Node2D" parent="AspectNode"]

[node name="TitleNode" type="Node2D" parent="AspectNode/LogoContainer"]
position = Vector2( 0, -300 )
script = ExtResource( 5 )
font = SubResource( 1 )
anchor = Vector2( 0.5, 0.5 )
char_anchor = Vector2( 0.5, 0.5 )

[node name="InfoNode" type="Node2D" parent="AspectNode/LogoContainer"]
position = Vector2( 0, -100 )
script = ExtResource( 6 )
anchor = Vector2( 0.5, 0.5 )
font = SubResource( 2 )

[node name="Logo" type="TextureRect" parent="AspectNode/LogoContainer"]
margin_left = -200.0
margin_top = -800.0
margin_right = 200.0
margin_bottom = -400.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Wave2" type="Node2D" parent="AspectNode"]

[node name="Sprite" type="Sprite" parent="AspectNode/Wave2"]
position = Vector2( 369.392, 2759.47 )
scale = Vector2( 4.17718, 2.32124 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="AspectNode/Wave2"]
position = Vector2( 2884.27, 2796.17 )
scale = Vector2( 4.50917, 2.32124 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="AspectNode/Wave2"]
position = Vector2( -2271.13, 2934.86 )
scale = Vector2( 3.33084, 2.32124 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="AspectNode/Wave2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3930.0
margin_top = 3106.0
margin_right = 5128.0
margin_bottom = 14022.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sponges" type="Node2D" parent="AspectNode"]

[node name="Sponge" type="Node2D" parent="AspectNode/Sponges"]
position = Vector2( 238.678, 128.231 )
__meta__ = {
"_edit_group_": true
}

[node name="Circle" type="ColorRect" parent="AspectNode/Sponges/Sponge"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sponge2" type="Node2D" parent="AspectNode/Sponges"]
position = Vector2( 482.739, 282.554 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Circle" type="ColorRect" parent="AspectNode/Sponges/Sponge2"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sponge3" type="Node2D" parent="AspectNode/Sponges"]
position = Vector2( 687.584, 71.1034 )
scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_group_": true
}

[node name="Circle" type="ColorRect" parent="AspectNode/Sponges/Sponge3"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sponge4" type="Node2D" parent="AspectNode/Sponges"]
position = Vector2( -184.238, 96.2029 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Circle" type="ColorRect" parent="AspectNode/Sponges/Sponge4"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sponge5" type="Node2D" parent="AspectNode/Sponges"]
position = Vector2( -61.0258, 172.994 )
scale = Vector2( 1.3, 1.3 )
__meta__ = {
"_edit_group_": true
}

[node name="Circle" type="ColorRect" parent="AspectNode/Sponges/Sponge5"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sponge6" type="Node2D" parent="AspectNode/Sponges"]
position = Vector2( -768.719, 326.49 )
scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_group_": true
}

[node name="Circle" type="ColorRect" parent="AspectNode/Sponges/Sponge6"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sponge7" type="Node2D" parent="AspectNode/Sponges"]
position = Vector2( -996.084, 181.585 )
scale = Vector2( 1.1, 1.1 )
__meta__ = {
"_edit_group_": true
}

[node name="Circle" type="ColorRect" parent="AspectNode/Sponges/Sponge7"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sponge8" type="Node2D" parent="AspectNode/Sponges"]
position = Vector2( 1082.86, 167.537 )
__meta__ = {
"_edit_group_": true
}

[node name="Circle" type="ColorRect" parent="AspectNode/Sponges/Sponge8"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sponge9" type="Node2D" parent="AspectNode/Sponges"]
position = Vector2( -458.593, 62.649 )
scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Circle" type="ColorRect" parent="AspectNode/Sponges/Sponge9"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="AspectNode"]
